# immarkus-visual-search

./: .gitignore  README.md
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: files.ts  index.ts  operations.ts  server.ts  store.ts  types.ts
client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: app.tsx  index.css  index.tsx  types.ts
client/src/components/: cropped-image.tsx  portal.tsx
client/src/components/ui/: button.tsx
client/src/pages/gallery/: gallery.tsx  lazy-image.tsx
client/src/pages/image/: image.tsx
client/src/pages/search/: result-modal.tsx  search.tsx
client/src/pages/start/: start.tsx
client/src/services/: search.ts
client/src/store/: store.ts
client/src/utils/: url.ts
guides/: client.md  server.md
server/: pyproject.toml  server.py  test.html
server/scripts/: export_clip_onnx.py
server/visual_search/: embedder.py  segmenter.py
test/: search.html  segment.html
